examples/test/testpolicy13001.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13001
  namespace: namespace373
spec:
  podSelector:
    matchLabels:
      key3: value34
      key18: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value48
          key10: value27
      podSelector:
        matchLabels:
          key6: value12
